--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,10 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+remappings = [
+    "@openzeppelin/=lib/openzeppelin-contracts/",
+    "@account-abstraction/=lib/account-abstraction/contracts",
+    "@permissive-core/=lib/core"
+]
+
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
