--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@permissivelabs/client": "^0.2.4",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
@@ -23,6 +24,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rlp": "^3.0.0",
     "tailwindcss": "3.3.2",
     "tls": "^0.0.1",
     "typescript": "5.1.3",
