--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,31 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@permissivelabs/client": "^0.2.4",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.13",
-    "@types/react-dom": "18.2.6",
-    "@web3modal/ethereum": "^2.4.7",
-    "@web3modal/react": "^2.4.7",
+    "@openzeppelin/merkle-tree": "^1.0.4",
+    "@permissivelabs/client": "^0.1.5",
+    "@types/react": "18.0.37",
+    "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
-    "ethers": "^6.6.0",
-    "net": "^1.0.2",
-    "next": "13.4.6",
-    "postcss": "8.4.24",
+    "eslint": "8.38.0",
+    "eslint-config-next": "13.3.0",
+    "ethers": "^5.7.2",
+    "next": "13.3.0",
+    "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "rlp": "^3.0.0",
-    "tailwindcss": "3.3.2",
-    "tls": "^0.0.1",
-    "typescript": "5.1.3",
-    "viem": "^1.0.7",
-    "wagmi": "^1.2.0"
+    "tailwindcss": "3.3.1",
+    "typescript": "5.0.4"
   },
-  "browser": {
-    "tls": false,
-    "net": false,
-    "fs": false
+  "devDependencies": {
+    "@types/node": "18.15.13",
+    "typechain": "^8.1.1",
+    "typescript": "^5.0.2"
   }
 }
